# CRPC

./: .gitignore  CMakeLists.txt  README.md  main.cc  未命名绘图.drawio
include/: crpc_log.h  non_copyable.h  (+3 more)
src/core/lib/: CMakeLists.txt
src/core/lib/backoff/: backoff.cc  backoff.h
src/core/lib/cprpp/: atomic_utils.h  construct_and_destruct.h  debug_location.h  fork.cc  fork.h  log.cc  manual_constructor.h  mpscq.cc  mpscq.h  no_destruct.h  notification.h  orphanable.h  ref_count_ptr.h  ref_counted.h  sync.h  time_averaged_stats.cc  time_averaged_stats.h  timer.h  useful.h
src/core/lib/cprpp/linux/: log.cc
src/core/lib/event_engine/: comm_closures.h  forkable.cc  forkable.h  poller.h  thread_local.cc  thread_local.h
src/core/lib/event_engine/posix_event_engine/: event_poller.cc  event_poller.h  posix_engine.cc  posix_engine.h  posix_engine_closure.h  tcp_socket_utils.h  timer.cc  timer.cpp  timer.h  timer_heap.cc  timer_heap.h  timer_manager.cc  timer_manager.h
src/core/lib/event_engine/thread_pool/: thread_count.cc  thread_count.h  thread_pool.h  thread_pool_factory.cc  work_stealing_thread_pool.cc  work_stealing_thread_pool.h
src/core/lib/event_engine/thready_event_engine/: thready_event_engine.cc  thready_event_engine.h
src/core/lib/iomgr/: closure.h  combiner.cc  combiner.h  exec_ctx.cc  exec_ctx.h
src/core/lib/promise/: activity.cc  activity.h  context.h  event_engine_wakeup_scheduler.h  poll.h
src/core/lib/resource_quota/: memory_quota.cc  memory_quota.h
src/core/lib/slice/: slice.cc  slice.h  slice_buffer.cc  slice_refcount.cc  slice_refcount.h
(+27 files in other folders)
