cmake_minimum_required(VERSION 2.8)
PROJECT(czyServer)
SET(CMAKE_BUILD_TYPE Debug)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/src)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-lpthread" )
SET(CMAKE_CXX_STANDARD 23)
add_subdirectory(src)
add_executable(main main.cc)
target_link_libraries(main core_lib)